src/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etax-frontend
  labels:
    app: etax-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: etax-frontend
  template:
    metadata:
      labels:
        app: etax-frontend
    spec:
      containers:
      - name: etax-frontend
        image: docker.io/delenies/etax-frontend:latest
        ports:
        - containerPort: 8080
