src/front-deployment.yaml
--
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: etax-frontend
  labels:
    app: etax-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etax-frontend
  strategy: {}
  template:
    metadata:
	  creationTimestamp: null
      labels:
        app: etax-frontend
    spec:
      containers:
      - image: docker.io/delenies/etax-frontend:latest
	name: etax-frontend
--
