src/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etax-frontend
  labels:
    app: etax-frontend
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: etax-frontend
  type: ClusterIP
