src/front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etax-frontend-ingress
  labels:
    app: etax-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: etax-frontend.sdg-etax-poc.apps.dc1.test.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: etax-frontend
            port:
              number: 80
